--- a/mdx_dev/Development.HandlingQueryComponents2.mdx
+++ b/mdx_dev/Development.HandlingQueryComponents2.mdx
@@ -1,109 +1,102 @@
 WITH 
-  // dummies
-  MEMBER [Product].[Product Categories].[Dummy] AS 
-    [Product].[Product Categories].DefaultMember 
-  MEMBER [Date].[Calendar].[Dummy] AS 
-    [Date].[Calendar].DefaultMember 
-  MEMBER [Product].[Product Categories].[EmptyRangeDummy] AS 
-    [Product].[Product Categories].DefaultMember 
-  MEMBER [Date].[Calendar].[EmptyRangeDummy] AS 
-    [Date].[Calendar].DefaultMember 
-  MEMBER [Measures].[Dummy] AS 
-    [Measures].DefaultMember 
-  MEMBER [Measures].[EmptyRangeDummy] AS 
-    [Measures].DefaultMember 
-  // selections
-  SET [Product.Product Categories.Selection_0_0] AS 
-    {
-      {[Product].[Product Categories].[Subcategory].&[31]}
-     ,{[Product].[Product Categories].[Subcategory].&[23]}
-    }
-  SET [Product.Product Categories.Selection_1_0] AS 
-    filter({{[Product].[Product Categories].[Subcategory].MEMBERS}}, [Measures].[Reseller Sales Amount] > 0)
-  SET [Date.Calendar.Selection_1_1] AS 
-    {{[Date].[Calendar].[Calendar Year].&[2008]}} 
-  SET [Date.Calendar.Selection_2_0] AS 
-    {{[Date].[Calendar].[Calendar Year].MEMBERS}} 
-  SET [Measures.Selection_3_0] AS 
-    {{[Measures].[Reseller Sales Amount]}} 
-  // query component member counts
-  MEMBER [Product].[Product Categories].[Product.Product Categories.Selection_0_0.Count] AS 
-    {[Product.Product Categories.Selection_0_0]}.Count 
-  MEMBER [Product].[Product Categories].[Product.Product Categories.Selection_1_0.Count] AS 
-    {{[Product.Product Categories.Selection_1_0]}}.Count 
-  MEMBER [Date].[Calendar].[Date.Calendar.Selection_1_1.Count] AS 
-    {{[Date.Calendar.Selection_1_1]}}.Count 
-  MEMBER [Date].[Calendar].[Date.Calendar.Selection_2_0.Count] AS 
-    {{[Date.Calendar.Selection_2_0]}}.Count 
-  MEMBER [Measures].[Measures.Selection_3_0.Count] AS 
-    {{[Measures.Selection_3_0]}}.Count 
-  // query component tupel count
+  // Dummy members to keep the dimensionality consistent during calculations
+  MEMBER [Product].[Product Categories].[Dummy] AS [Product].[Product Categories].DefaultMember 
+  MEMBER [Date].[Calendar].[Dummy] AS [Date].[Calendar].DefaultMember 
+  MEMBER [Product].[Product Categories].[EmptyRangeDummy] AS [Product].[Product Categories].DefaultMember 
+  MEMBER [Date].[Calendar].[EmptyRangeDummy] AS [Date].[Calendar].DefaultMember 
+  MEMBER [Measures].[Dummy] AS [Measures].DefaultMember 
+  MEMBER [Measures].[EmptyRangeDummy] AS [Measures].DefaultMember 
+
+  // Sets of product categories selected based on specific criteria
+  SET [Product.Product Categories.Selection_0_0] AS {
+    {[Product].[Product Categories].[Subcategory].&[31]},
+    {[Product].[Product Categories].[Subcategory].&[23]}
+  }
+  SET [Product.Product Categories.Selection_1_0] AS {
+    FILTER([Product].[Product Categories].[Subcategory].MEMBERS, [Measures].[Reseller Sales Amount] > 0)
+  }
+
+  // Sets of calendar years for analysis
+  SET [Date.Calendar.Selection_1_1] AS {
+    {[Date].[Calendar].[Calendar Year].&[2008]}
+  } 
+  SET [Date.Calendar.Selection_2_0] AS {
+    {[Date].[Calendar].[Calendar Year].MEMBERS}
+  }
+
+  // Set of measures selected for analysis
+  SET [Measures.Selection_3_0] AS {
+    {[Measures].[Reseller Sales Amount]}
+  }
+
+  // Calculating counts of selected sets
+  MEMBER [Product].[Product Categories].[Product.Product Categories.Selection_0_0.Count] AS COUNT([Product.Product Categories.Selection_0_0])
+  MEMBER [Product].[Product Categories].[Product.Product Categories.Selection_1_0.Count] AS COUNT([Product.Product Categories.Selection_1_0])
+  MEMBER [Date].[Calendar].[Date.Calendar.Selection_1_1.Count] AS COUNT([Date.Calendar.Selection_1_1])
+  MEMBER [Date].[Calendar].[Date.Calendar.Selection_2_0.Count] AS COUNT([Date.Calendar.Selection_2_0])
+  MEMBER [Measures].[Measures.Selection_3_0.Count] AS COUNT([Measures.Selection_3_0])
+
+  // Calculating the tuple count (a tuple combines elements from different dimensions)
   MEMBER [Product].[Product Categories].[Product.Product Categories.Selection_0_0.Tuple.Count] AS 0 
   MEMBER [Product].[Product Categories].[Product.Product Categories.Selection_1_0.Tuple.Count] AS 1 
   MEMBER [Date].[Calendar].[Date.Calendar.Selection_1_1.Tuple.Count] AS 1 
   MEMBER [Date].[Calendar].[Date.Calendar.Selection_2_0.Tuple.Count] AS 2 
   MEMBER [Measures.Selection_3_0.Tuple.Count] AS 3 
-  // query component hierarchy count
+
+  // Counting hierarchy components in selected sets
   MEMBER [Product].[Product Categories].[Product.Product Categories.Selection_0_0.Hierarchy.Count] AS 0 
   MEMBER [Product].[Product Categories].[Product.Product Categories.Selection_1_0.Hierarchy.Count] AS 0 
   MEMBER [Date].[Calendar].[Date.Calendar.Selection_1_1.Hierarchy.Count] AS 1 
   MEMBER [Date].[Calendar].[Date.Calendar.Selection_2_0.Hierarchy.Count] AS 0 
   MEMBER [Measures.Selection_3_0.Hierarchy.Count] AS 0 
+
 SELECT 
-  {[Measures.Selection_3_0]} ON 0
- ,
- Extract
- (
- {
-      {
-        [Product].[Product Categories].[Product.Product Categories.Selection_0_0.Count]
-       ,[Product].[Product Categories].[Product.Product Categories.Selection_0_0.Tuple.Count]
-       ,[Product].[Product Categories].[Product.Product Categories.Selection_0_0.Hierarchy.Count]
-      }
-    * 
-      {[Date].[Calendar].[Dummy]}
-   ,
-      {
-        [Product].[Product Categories].[Product.Product Categories.Selection_1_0.Count]
-       ,[Product].[Product Categories].[Product.Product Categories.Selection_1_0.Tuple.Count]
-       ,[Product].[Product Categories].[Product.Product Categories.Selection_1_0.Hierarchy.Count]
-      }
-    * 
-      {{[Date].[Calendar].[Dummy]}}
-   ,
-      {[Product].[Product Categories].[Dummy]}
-    * 
-      {
-        [Date].[Calendar].[Date.Calendar.Selection_1_1.Count]
-       ,[Date].[Calendar].[Date.Calendar.Selection_1_1.Tuple.Count]
-       ,[Date].[Calendar].[Date.Calendar.Selection_1_1.Hierarchy.Count]
-      }
-   ,
-      {[Product].[Product Categories].[Dummy]}
-    * 
-      {
-        [Date].[Calendar].[Date.Calendar.Selection_2_0.Count]
-       ,[Date].[Calendar].[Date.Calendar.Selection_2_0.Tuple.Count]
-       ,[Date].[Calendar].[Date.Calendar.Selection_2_0.Hierarchy.Count]
-      }
-  }, [Date].[Calendar]
- )
-  ON 1
-FROM 
-(
-  SELECT 
+  // Selecting measures for analysis
+  {[Measures.Selection_3_0]} ON COLUMNS,
+
+  // Extracting and cross-joining dimensions and measures for detailed analysis
+  EXTRACT(
     {
-      [Reseller].[Reseller Bank].[Bank Name].&[International Security]
-     ,[Reseller].[Reseller Bank].[Bank Name].&[Primary Bank & Reserve]
-     ,[Reseller].[Reseller Bank].[Bank Name].&[United Security]
-    } ON 0
-  FROM 
+      ([Product].[Product Categories].[Product.Product Categories.Selection_0_0.Count],
+       [Product].[Product Categories].[Product.Product Categories.Selection_0_0.Tuple.Count],
+       [Product].[Product Categories].[Product.Product Categories.Selection_0_0.Hierarchy.Count])
+      *
+      {[Date].[Calendar].[Dummy]},
+      ([Product].[Product Categories].[Product.Product Categories.Selection_1_0.Count],
+       [Product].[Product Categories].[Product.Product Categories.Selection_1_0.Tuple.Count],
+       [Product].[Product Categories].[Product.Product Categories.Selection_1_0.Hierarchy.Count])
+      *
+      {[Date].[Calendar].[Dummy]},
+      {[Product].[Product Categories].[Dummy]}
+      *
+      ([Date].[Calendar].[Date.Calendar.Selection_1_1.Count],
+       [Date].[Calendar].[Date.Calendar.Selection_1_1.Tuple.Count],
+       [Date].[Calendar].[Date.Calendar.Selection_1_1.Hierarchy.Count]),
+      {[Product].[Product Categories].[Dummy]}
+      *
+      ([Date].[Calendar].[Date.Calendar.Selection_2_0.Count],
+       [Date].[Calendar].[Date.Calendar.Selection_2_0.Tuple.Count],
+       [Date].[Calendar].[Date.Calendar.Selection_2_0.Hierarchy.Count])
+    }, 
+    [Date].[Calendar]
+  ) ON ROWS
+
+FROM 
+  // Sub-selecting relevant data from the Adventure Works cube for focused analysis
   (
     SELECT 
       {
-        [Customer].[Customer Geography].[Country].&[Canada]
-       ,[Customer].[Customer Geography].[Country].&[Germany]
-      } ON 0
-    FROM [Adventure Works]
-  )
-);
+        [Reseller].[Reseller Bank].[Bank Name].&[International Security],
+        [Reseller].[Reseller Bank].[Bank Name].&[Primary Bank & Reserve],
+        [Reseller].[Reseller Bank].[Bank Name].&[United Security]
+      } ON COLUMNS
+    FROM 
+      (
+        SELECT 
+          {
+            [Customer].[Customer Geography].[Country].&[Canada],
+            [Customer].[Customer Geography].[Country].&[Germany]
+          } ON COLUMNS
+        FROM [Adventure Works]
+      )
+  );
