--- a/mdx_dev/Development.SelectComplexDataAutoexistsDrilldown.mdx
+++ b/mdx_dev/Development.SelectComplexDataAutoexistsDrilldown.mdx
@@ -1,4 +1,5 @@
 WITH 
+  -- Setting up dummy members for default use in MDX queries
   MEMBER [Measures].[Dummy] AS 
     [Measures].DefaultMember 
   MEMBER [Measures].[EmptyRangeDummy] AS 
@@ -11,19 +12,29 @@ WITH
     [Date].[Calendar].DefaultMember 
   MEMBER [Geography].[Geography].[EmptyRangeDummy] AS 
     [Geography].[Geography].DefaultMember 
+  
+  -- Define a set for Measures to use in the query
   SET [Measures.Selection_0_0] AS 
     {{[Measures].[Reseller Sales Amount]}} 
+  
+  -- Define sets for drilldown levels on Date and Geography dimensions
   SET [DrillDownLevel.Date.Calendar.Selection_1_0] AS 
     {{DrillDownLevel({[Date].[Calendar].DefaultMember})}} 
   SET [DrillDownLevel.Geography.Geography.Selection_1_1] AS 
     {{DrillDownLevel({[Geography].[Geography].DefaultMember})}} 
+  
+-- The main SELECT statement of the MDX query fetching the necessary data
 SELECT 
   NON EMPTY 
-    {[Measures.Selection_0_0]} ON 0
- ,NON EMPTY 
+    -- Selecting the measure set on columns
+    {[Measures.Selection_0_0]} ON 0,
+  NON EMPTY 
+    -- Crossjoining the Date and Geography drilldown sets on rows
     {
         [DrillDownLevel.Date.Calendar.Selection_1_0]
       * 
         [DrillDownLevel.Geography.Geography.Selection_1_1]
     } ON 1
-FROM [Adventure Works];
+FROM 
+  -- Specifying the cube to query from
+  [Adventure Works];
