--- a/mdx_dev/Development.SelectiveDrilldown.DiffRootMembersToThreeChildren.mdx
+++ b/mdx_dev/Development.SelectiveDrilldown.DiffRootMembersToThreeChildren.mdx
@@ -1,82 +1,69 @@
 WITH 
+  -- Defines the geographic groupings for specific countries
   SET [Customer.Customer Geography.SelectedDrilldown_1_1_1] AS 
     {
-      [Customer].[Customer Geography].[Country].&[Australia]
-     ,[Customer].[Customer Geography].[Country].&[Canada]
+      [Customer].[Customer Geography].[Country].&[Australia],
+      [Customer].[Customer Geography].[Country].&[Canada]
     } 
   SET [Customer.Customer Geography.SelectedDrilldown_1_1_2] AS 
     {
-      [Customer].[Customer Geography].[Country].&[France]
-     ,[Customer].[Customer Geography].[Country].&[Germany]
+      [Customer].[Customer Geography].[Country].&[France],
+      [Customer].[Customer Geography].[Country].&[Germany]
     } 
   SET [Customer.Customer Geography.SelectedDrilldown_1_1_3] AS 
     {
-      [Customer].[Customer Geography].[Country].&[United Kingdom]
-     ,[Customer].[Customer Geography].[Country].&[United States]
+      [Customer].[Customer Geography].[Country].&[United Kingdom],
+      [Customer].[Customer Geography].[Country].&[United States]
     } 
+  -- Measure for internet order quantities
   SET [Measures.Selection_0_0] AS 
     {[Measures].[Internet Order Quantity]} 
+  -- Date selection with drill down to default level
   SET [DrillDownLevel.Date.Calendar.Selection_1_0] AS 
     {DrillDownLevel({[Date].[Calendar].DefaultMember})} 
+  -- Customer geography drill down to default level
   SET [DrillDownLevel.Customer.Customer Geography.Selection_1_1] AS 
     {
       DrillDownLevel({[Customer].[Customer Geography].DefaultMember})
     } 
+
 SELECT 
-  {[Measures.Selection_0_0]}
-  DIMENSION PROPERTIES [PARENT_UNIQUE_NAME]  ON 0
- ,NON EMPTY 
+  -- Selects the measure to display
+  {[Measures.Selection_0_0]} DIMENSION PROPERTIES [PARENT_UNIQUE_NAME]  ON 0,
+  -- Filters and aggregates data based on calendar year and customer geography
+  NON EMPTY 
     {
       Generate
       (
-        [DrillDownLevel.Date.Calendar.Selection_1_0]
-       ,IIF
+        [DrillDownLevel.Date.Calendar.Selection_1_0],
+        IIF
         (
-            [Date].[Calendar].CurrentMember
-          IS 
-            [Date].[Calendar].[Calendar Year].&[2006]
-         ,Generate
+          [Date].[Calendar].CurrentMember IS [Date].[Calendar].[Calendar Year].&[2006],
+          Generate
           (
-            [Customer.Customer Geography.SelectedDrilldown_1_1_1]
-           ,
-              {[Date].[Calendar].CurrentMember}
-            * 
-              {[Customer].[Customer Geography].CurrentMember}
-          )
-         ,IIF
+            [Customer.Customer Geography.SelectedDrilldown_1_1_1],
+            {[Date].[Calendar].CurrentMember} * {[Customer].[Customer Geography].CurrentMember}
+          ),
+          IIF
           (
-              [Date].[Calendar].CurrentMember
-            IS 
-              [Date].[Calendar].[Calendar Year].&[2007]
-           ,Generate
+            [Date].[Calendar].CurrentMember IS [Date].[Calendar].[Calendar Year].&[2007],
+            Generate
             (
-              [Customer.Customer Geography.SelectedDrilldown_1_1_2]
-             ,
-                {[Date].[Calendar].CurrentMember}
-              * 
-                {[Customer].[Customer Geography].CurrentMember}
-            )
-           ,IIF
+              [Customer.Customer Geography.SelectedDrilldown_1_1_2],
+              {[Date].[Calendar].CurrentMember} * {[Customer].[Customer Geography].CurrentMember}
+            ),
+            IIF
             (
-                [Date].[Calendar].CurrentMember
-              IS 
-                [Date].[Calendar].[Calendar Year].&[2008]
-             ,Generate
+              [Date].[Calendar].CurrentMember IS [Date].[Calendar].[Calendar Year].&[2008],
+              Generate
               (
-                [Customer.Customer Geography.SelectedDrilldown_1_1_3]
-               ,
-                  {[Date].[Calendar].CurrentMember}
-                * 
-                  {[Customer].[Customer Geography].CurrentMember}
-              )
-             ,
-                {[Date].[Calendar].CurrentMember}
-              * 
-                {[Customer].[Customer Geography].DefaultMember}
+                [Customer.Customer Geography.SelectedDrilldown_1_1_3],
+                {[Date].[Calendar].CurrentMember} * {[Customer].[Customer Geography].CurrentMember}
+              ),
+              {[Date].[Calendar].CurrentMember} * {[Customer].[Customer Geography].DefaultMember}
             )
           )
         )
       )
-    }
-  DIMENSION PROPERTIES [PARENT_UNIQUE_NAME]  ON 1
+    } DIMENSION PROPERTIES [PARENT_UNIQUE_NAME]  ON 1
 FROM [Adventure Works];
