--- a/mdx_dev/Development.SelectiveDrilldown.InitialRangeQuery.mdx
+++ b/mdx_dev/Development.SelectiveDrilldown.InitialRangeQuery.mdx
@@ -1,6 +1,7 @@
 WITH 
   SET [Measures.Selection_0_0] AS 
     {[Measures].[Internet Order Quantity]} 
+  -- Drilldown levels for date, customer geography, and product categories
   SET [DrillDownLevel.Date.Calendar.Selection_1_0] AS 
     {DrillDownLevel({[Date].[Calendar].DefaultMember})} 
   SET [DrillDownLevel.Customer.Customer Geography.Selection_1_1] AS 
@@ -11,6 +12,7 @@ WITH
     {
       DrillDownLevel({[Product].[Product Categories].DefaultMember})
     } 
+  -- Selections for all dates, all customers, and all products
   SET [Date.Calendar.Selection_2_0] AS 
     {[Date].[Calendar].[All Periods]} 
   SET [Customer.Customer Geography.Selection_2_1] AS 
@@ -18,7 +20,7 @@ WITH
   SET [Product.Product Categories.Selection_2_2] AS 
     {[Product].[Product Categories].[All Products]} 
 SELECT 
-  {[Measures.Selection_0_0]}
+  {[Measures.Selection_0_0]} -- Selecting the measure of interest
   DIMENSION PROPERTIES [PARENT_UNIQUE_NAME]  ON 0
  ,NON EMPTY 
     {
