--- a/mdx_dev/Development.SelectiveDrilldown.SubRangesGenerate.mdx
+++ b/mdx_dev/Development.SelectiveDrilldown.SubRangesGenerate.mdx
@@ -5,13 +5,13 @@ WITH
     {[Date].[Calendar].DefaultMember} 
   SET [Date.Calendar.Selection_Set_For_Generate] AS 
     {
-      [Date].[Calendar].DefaultMember
-     ,DrillDownLevel({[Date].[Calendar].DefaultMember})
+      [Date].[Calendar].DefaultMember,
+      DrillDownLevel({[Date].[Calendar].DefaultMember})
     } 
   SET [Customer.Customer Geography.Selection_Set_For_Generate] AS 
     {
-      [Customer].[Customer Geography].DefaultMember
-     ,DrillDownLevel({[Customer].[Customer Geography].DefaultMember})
+      [Customer].[Customer Geography].DefaultMember,
+      DrillDownLevel({[Customer].[Customer Geography].DefaultMember})
     } 
   SET [Date.Calendar.Selection_Range0_SubRange0] AS 
     {[Date].[Calendar].DefaultMember} 
@@ -31,68 +31,63 @@ WITH
       (
         {
           DrillDownLevel({[Product].[Product Categories].[All Products]})
-        }
-       ,{[Product].[Product Categories].[Category].&[1]}
-       ,RECURSIVE
+        },
+        {[Product].[Product Categories].[Category].&[1]},
+        RECURSIVE
       )
     } 
 SELECT 
-  {[Measures.Selection_0_0]}
-  DIMENSION PROPERTIES [PARENT_UNIQUE_NAME]  ON 0
- ,NON EMPTY 
+  {[Measures.Selection_0_0]} DIMENSION PROPERTIES [PARENT_UNIQUE_NAME]  ON 0,
+  NON EMPTY 
     {
-      {
+      Generate
+      (
+        [Date.Calendar.Selection_Set_For_Generate],
         Generate
         (
-          [Date.Calendar.Selection_Set_For_Generate]
-         ,Generate
+          [Customer.Customer Geography.Selection_Set_For_Generate],
+          IIF
           (
-            [Customer.Customer Geography.Selection_Set_For_Generate]
-           ,IIF
+            [Date].[Calendar].CurrentMember IS [Date].[Calendar].[Calendar Year].&[2008],
+            Generate
             (
-                [Date].[Calendar].CurrentMember
-              IS 
-                [Date].[Calendar].[Calendar Year].&[2008]
-             ,Generate
+              [Date].[Calendar].CurrentMember,
+              Generate
               (
-                [Date].[Calendar].CurrentMember
-               ,Generate
+                [Customer.Customer Geography.Selection_Set_For_Generate],
+                IIF
                 (
-                  [Customer.Customer Geography.Selection_Set_For_Generate]
-                 ,IIF
-                  (
-                      [Customer].[Customer Geography].CurrentMember
-                    IS 
-                      [Customer].[Customer Geography].[Country].&[Germany]
-                   ,{
+                  [Customer].[Customer Geography].CurrentMember IS [Customer].[Customer Geography].[Country].&[Germany],
+                  {
+                    Generate
+                    (
+                      [Date].[Calendar].CurrentMember,
                       Generate
                       (
-                        [Date].[Calendar].CurrentMember
-                       ,Generate
-                        (
-                          [Customer].[Customer Geography].CurrentMember
-                         ,
-                            {[Date].[Calendar].CurrentMember}*
-                            {[Customer].[Customer Geography].CurrentMember}*
-                            [DrillDownLevel.Product.Product Categories.Selection_2_2]
-                        )
+                        [Customer.Customer Geography].CurrentMember,
+                        {
+                          {[Date].[Calendar].CurrentMember} *
+                          {[Customer].[Customer Geography].CurrentMember} *
+                          [DrillDownLevel.Product.Product Categories.Selection_2_2]
+                        }
                       )
-                    }
-                   ,
-                      {[Date].[Calendar].CurrentMember}*
-                      {[Customer].[Customer Geography].CurrentMember}*
-                      {[Product].[Product Categories].DefaultMember}
-                  )
+                    )
+                  },
+                  {
+                    {[Date].[Calendar].CurrentMember} *
+                    {[Customer].[Customer Geography].CurrentMember} *
+                    {[Product].[Product Categories].DefaultMember}
+                  }
                 )
               )
-             ,
-                {[Date].[Calendar].CurrentMember}*
-                {[Customer].[Customer Geography].DefaultMember}*
-                [Product.Product Categories.DefaultMember]
-            )
+            ),
+            {
+              {[Date].[Calendar].CurrentMember} *
+              {[Customer].[Customer Geography].DefaultMember} *
+              [Product.Product Categories.DefaultMember]
+            }
           )
         )
-      }
-    }
-  DIMENSION PROPERTIES [PARENT_UNIQUE_NAME]  ON 1
+      )
+    } DIMENSION PROPERTIES [PARENT_UNIQUE_NAME]  ON 1
 FROM [Adventure Works];
