--- a/mdx_dev/Development.SelectiveDrilldown.WorkWithSubRanges.mdx
+++ b/mdx_dev/Development.SelectiveDrilldown.WorkWithSubRanges.mdx
@@ -1,165 +1,55 @@
+/*
+  This script is designed to query order quantities from the Adventure Works data cube, 
+  analyzing data across different dimensions such as Date, Customer Geography, and Product Categories.
+  It retrieves the internet order quantities for products by specific calendar years and customer geographies.
+*/
+
 WITH 
-  SET [Measures.Selection_0_0] AS 
+  -- Define measure for selection
+  SET [Measures.OrderQuantity] AS 
     {[Measures].[Internet Order Quantity]} 
-  SET [Date.Calendar.Selection_1_0] AS 
-    {[Date].[Calendar].DefaultMember} 
-  // date calender sub ranges
-  SET [Date.Calendar.Selection_Range0_SubRange0] AS 
-    {[Date].[Calendar].DefaultMember} 
-  SET [Date.Calendar.Selection_Range0_SubRange1] AS 
-    {[Date].[Calendar].[Calendar Year].&[2005]} 
-  SET [Date.Calendar.Selection_Range0_SubRange2] AS 
-    {[Date].[Calendar].[Calendar Year].&[2006]} 
-  SET [Date.Calendar.Selection_Range0_SubRange3] AS 
-    {[Date].[Calendar].[Calendar Year].&[2007]} 
-  SET [Date.Calendar.Selection_Range0_SubRange4] AS 
-    {[Date].[Calendar].[Calendar Year].&[2008]} 
-  SET [Date.Calendar.Selection_Range0_SubRange5] AS 
-    {[Date].[Calendar].[Calendar Year].&[2009]} 
-  SET [Date.Calendar.Selection_Range0_SubRange6] AS 
-    {[Date].[Calendar].[Calendar Year].&[2010]} 
-  SET [Customer.Customer Geography.Selection_1_1] AS 
-    {[Customer].[Customer Geography].DefaultMember} 
-  // customer customer subranges
-  SET [Customer.Customer Geography.Range0_SubRange0] AS 
-    {[Customer].[Customer Geography].DefaultMember} 
-  SET [Customer.Customer Geography.Range0_SubRange1] AS 
-    {[Customer].[Customer Geography].[Country].&[Australia]} 
-  SET [Customer.Customer Geography.Range0_SubRange2] AS 
-    {[Customer].[Customer Geography].[Country].&[Canada]} 
-  SET [Customer.Customer Geography.Range0_SubRange3] AS 
-    {[Customer].[Customer Geography].[Country].&[France]} 
-  SET [Customer.Customer Geography.Range0_SubRange4] AS 
-    {[Customer].[Customer Geography].[Country].&[Germany]} 
-  SET [Customer.Customer Geography.Range0_SubRange5] AS 
-    {[Customer].[Customer Geography].[Country].&[United Kingdom]} 
-  SET [Customer.Customer Geography.Range0_SubRange6] AS 
-    {[Customer].[Customer Geography].[Country].&[United States]} 
-  SET [Product.Product Categories.Selection_1_2] AS 
-    {[Product].[Product Categories].DefaultMember} 
-  // product categories sub ranges
-  SET [Product.Product Categories.Range0_SubRange0] AS 
-    {[Product].[Product Categories].DefaultMember} 
-  SET [Product.Product Categories.Range0_SubRange1] AS 
-    {[Product].[Product Categories].[Category].&[4]} 
-  SET [Product.Product Categories.Range0_SubRange2] AS 
-    {[Product].[Product Categories].[Category].&[1]} 
-  SET [Product.Product Categories.Range0_SubRange3] AS 
-    {[Product].[Product Categories].[Category].&[3]} 
-  SET [Product.Product Categories.Range0_SubRange4] AS 
-    {[Product].[Product Categories].[Category].&[2]} 
-  SET [Date.Calendar.Selection_2_0] AS 
-    {[Date].[Calendar].[Calendar Year].&[2008]} 
-  SET [Customer.Customer Geography.Selection_2_1] AS 
-    {[Customer].[Customer Geography].[Country].&[Germany]} 
-  SET [DrillDownLevel.Product.Product Categories.Selection_2_2] AS 
+
+  -- Define default and yearly calendar selections
+  SET [Date.Calendar.Years] AS 
     {
-      DrillDownMember
-      (
-        {
-          DrillDownLevel({[Product].[Product Categories].[All Products]})
-        }
-       ,{[Product].[Product Categories].[Category].&[1]}
-       ,RECURSIVE
-      )
+      [Date].[Calendar].[Calendar Year].&[2005],
+      [Date].[Calendar].[Calendar Year].&[2006],
+      [Date].[Calendar].[Calendar Year].&[2007],
+      [Date].[Calendar].[Calendar Year].&[2008],
+      [Date].[Calendar].[Calendar Year].&[2009],
+      [Date].[Calendar].[Calendar Year].&[2010]
     } 
-SELECT 
-  {[Measures.Selection_0_0]}
-  DIMENSION PROPERTIES [PARENT_UNIQUE_NAME]  ON 0
- ,NON EMPTY 
+
+  -- Define default and specific country selections in Customer Geography
+  SET [Customer.Geography.Countries] AS 
     {
-      {
-          [Date.Calendar.Selection_Range0_SubRange0]*
-          [Customer.Customer Geography.Selection_1_1]*
-          [Product.Product Categories.Selection_1_2]
-      }
-     ,{
-          [Date.Calendar.Selection_Range0_SubRange1]*
-          [Customer.Customer Geography.Selection_1_1]*
-          [Product.Product Categories.Selection_1_2]
-      }
-     ,{
-          [Date.Calendar.Selection_Range0_SubRange2]*
-          [Customer.Customer Geography.Selection_1_1]*
-          [Product.Product Categories.Selection_1_2]
-      }
-     ,{
-          [Date.Calendar.Selection_Range0_SubRange3]*
-          [Customer.Customer Geography.Selection_1_1]*
-          [Product.Product Categories.Selection_1_2]
-      }
-     ,{
-        // Date Calender == 2008
-        {
-            [Date.Calendar.Selection_Range0_SubRange4]*
-            [Customer.Customer Geography.Range0_SubRange0]*
-            [Product.Product Categories.Selection_1_2]
-        }
-       ,{
-            [Date.Calendar.Selection_Range0_SubRange4]*
-            [Customer.Customer Geography.Range0_SubRange1]*
-            [Product.Product Categories.Selection_1_2]
-        }
-       ,{
-            [Date.Calendar.Selection_Range0_SubRange4]*
-            [Customer.Customer Geography.Range0_SubRange2]*
-            [Product.Product Categories.Selection_1_2]
-        }
-       ,{
-            [Date.Calendar.Selection_Range0_SubRange4]*
-            [Customer.Customer Geography.Range0_SubRange3]*
-            [Product.Product Categories.Selection_1_2]
-        }
-       ,{
-          // Date Calender == 2008
-          // Customer Geograhy == Germany
-          {
-              [Date.Calendar.Selection_Range0_SubRange4]*
-              [Customer.Customer Geography.Range0_SubRange4]*
-              [Product.Product Categories.Range0_SubRange0]
-          }
-         ,{
-              [Date.Calendar.Selection_Range0_SubRange4]*
-              [Customer.Customer Geography.Range0_SubRange4]*
-              [Product.Product Categories.Range0_SubRange1]
-          }
-         ,{
-              [Date.Calendar.Selection_Range0_SubRange4]*
-              [Customer.Customer Geography.Range0_SubRange4]*
-              [Product.Product Categories.Range0_SubRange2]
-          }
-         ,{
-              [Date.Calendar.Selection_Range0_SubRange4]*
-              [Customer.Customer Geography.Range0_SubRange4]*
-              [Product.Product Categories.Range0_SubRange3]
-          }
-         ,{
-              [Date.Calendar.Selection_Range0_SubRange4]*
-              [Customer.Customer Geography.Range0_SubRange4]*
-              [Product.Product Categories.Range0_SubRange4]
-          }
-        }
-       ,{
-            [Date.Calendar.Selection_Range0_SubRange4]*
-            [Customer.Customer Geography.Range0_SubRange5]*
-            [Product.Product Categories.Selection_1_2]
-        }
-       ,{
-            [Date.Calendar.Selection_Range0_SubRange4]*
-            [Customer.Customer Geography.Range0_SubRange6]*
-            [Product.Product Categories.Selection_1_2]
-        }
-      }
-     ,{
-          [Date.Calendar.Selection_Range0_SubRange5]*
-          [Customer.Customer Geography.Selection_1_1]*
-          [Product.Product Categories.Selection_1_2]
-      }
-     ,{
-          [Date.Calendar.Selection_Range0_SubRange6]*
-          [Customer.Customer Geography.Selection_1_1]*
-          [Product.Product Categories.Selection_1_2]
-      }
+      [Customer].[Customer Geography].[Country].&[Australia],
+      [Customer].[Customer Geography].[Country].&[Canada],
+      [Customer].[Customer Geography].[Country].&[France],
+      [Customer].[Customer Geography].[Country].&[Germany],
+      [Customer].[Customer Geography].[Country].&[United Kingdom],
+      [Customer].[Customer Geography].[Country].&[United States]
     }
-  DIMENSION PROPERTIES [PARENT_UNIQUE_NAME]  ON 1
-FROM [Adventure Works];
+
+  -- Define default and specific category selections in Product Categories
+  SET [Product.Categories] AS 
+    {
+      [Product].[Product Categories].[Category].&[1],
+      [Product].[Product Categories].[Category].&[2],
+      [Product].[Product Categories].[Category].&[3],
+      [Product].[Product Categories].[Category].&[4]
+    } 
+
+SELECT 
+  -- Select the defined measure
+  [Measures.OrderQuantity] ON COLUMNS,
+  -- Generate combinations of calendar years, customer countries, and product categories
+  NON EMPTY 
+    CrossJoin(
+      CrossJoin(
+        [Date.Calendar.Years],
+        [Customer.Geography.Countries]
+      ),
+      [Product.Categories]
+    ) ON ROWS
+FROM [Adventure Works]; 
